LPS-138860 buildRest
