# modules/apps/object/object-admin-rest-impl/rest-openapi.yaml
@@ -126,7 +126,7 @@ components:
                     type: object
                 objectLayoutRows:
                     items:
-                        $ref: "#/components/schemas/ObjectLayoutBoxRow"
+                        $ref: "#/components/schemas/ObjectLayoutRow"
                     type: array
                 priority:
                     format: int64
@@ -151,7 +151,7 @@ components:
                     type: integer
                 objectLayoutColumns:
                     items:
-                        $ref: "#/components/schemas/ObjectLayoutBoxColumn"
+                        $ref: "#/components/schemas/ObjectLayoutColumn"
                     type: array
                 priority:
                     format: int64
